--- a/littleangels-academy-1/package.json
+++ b/littleangels-academy-1/package.json
@@ -9,7 +9,9 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --host 0.0.0.0 --port ${PORT:-5000}",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "setup-db": "node setup-database.js",
+    "setup": "npm run setup-db && npm run dev"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
