--- a/littleangels-academy-1/package.json
+++ b/littleangels-academy-1/package.json
@@ -16,17 +16,18 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.87.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "@supabase/supabase-js": "^2.45.0",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.2",
     "framer-motion": "^10.16.5",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.290.0",
     "qrcode": "^1.5.3",
